<resources>
    <string name="app_name">LifeNote</string>
    <string name="action_settings">Settings</string>
    <string name="login">Log In</string>
    <string name="signUp">Sign Up</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="photo_select">Select Photo</string>
    <string name="continue_">Continue</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="username">Username</string>
    <string name="email">E-Mail Address</string>
    <string name="password">Password</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="dev_user">user1@test.com</string>
    <string name="dev_password">test</string>
    <string name="dev_url">http://video45.cloudapp.net</string>
    <string name="profile_picture_content_description">profile picture</string>
    <string name="nav_open">open</string>
    <string name="nav_close">close</string>
    <string name="Search">Search</string>
    <string name="user">User</string>
    <string name="menu_items_description">menu items</string>
    <string name="title_activity_login">Log In</string>
    <string name="settings_title">Settings</string>
    <string name="btn_createnewnote_notefragment">Create New Note</string>
    <string-array name="nav_options">
        <item>Notes</item>
        <item>Doctors</item>
        <item>Appointments</item>
        <item>Medication</item>
        <item>Test Results</item>
        <item>Find Aid</item>
        <item>Settings</item>
        <item>Logout</item>
    </string-array>
    <string name="title_activity_test">testActivity</string>
    <string name="title_activity_create_detailed_note">CreateDetailedNoteActivity</string>
    <string name="btn_submitCreatedNote_createNoteAcivity">Submit</string>
    <string name="btn_cancelCreatedNote_createNoteAcivity">Cancel</string>
    <string name="editTextHint_newNoteTextHint_createNoteAcivity">Enter Description</string>
    <string name="editTextHint_newNoteNameHint_createNoteAcivity">Enter Name</string>
    <string name="editTextHint_newNoteIllnessHint_createNoteAcivity">Enter Illness</string>
    <string name="editTextHint_newNotesymptomHint_createNoteAcivity">Enter List of Symptoms</string>
    <string name="lbl_severity_createNoteAcivity">Enter Severity</string>
    <string-array name="switchNoteTypeArray_quickNote">
        <item>Quick Note</item>
        <item>Detailed Note</item>
        <item>Doctor\'s Visit</item>
    </string-array>
    <string-array name="switchNoteTypeArray_detailedNote">
        <item>Detailed Note</item>
        <item>Quick Note</item>
        <item>Doctor\'s Visit</item>
    </string-array>
    <string-array name="switchNoteTypeArray_docNote">
        <item>Doctor\'s Note</item>
        <item>Quick Note</item>
        <item>Detailed Note</item>
    </string-array>
    <string name="notes_title">Notes</string>
    <string name="doctors_title">Doctors</string>
    <string name="testPhone">Phone Number Not Entered</string>
    <string name="testName">Doctor Name Not Entered</string>
    <string name="testAddress">Doctor Address Not Entered</string>
    <string name="action_quick_note">Quick Note</string>
    <string name="title_createDetailedNote_createNewNotePage">Create Quick Note</string>
    <string name="title_createDocNote_createNewNotePage">Create Doctor\'s Note</string>
    <string name="title_createQuickNote_createNewNotePage">Create Quick Note</string>
    <string name="testModDate">Last Modified: Jan/1/17</string>
    <string name="testNoteName">Note Tester</string>
    <string name="editTextHint_enterDoctor">Enter Doctor Name</string>
    <string name="editTextHint_enterDate">Enter Date</string>
    <string name="pick_time">Enter Time</string>
    <string name="pick_date">Enter Date</string>
    <string name="editTextHint_enterTime">Enter Time</string>
    <string-array name="doctors_array">
        <item>Dr. Khlid (Doctor)</item>
        <item>Dr. Sperber (Orthodontist)</item>
        <item>Dr. Kim (Dentist)</item>
        <item>Dr. Anderson (Specialist)</item>
    </string-array>
    <string-array name="illnesses_array">
        <item>Cancer</item>
        <item>Cold</item>
        <item>C. Difficile</item>
        <item>Carcinoma</item>
    </string-array>
    <string name="title_activity_show_notes">ShowNotes</string>
    <string name="title_activity_show_appointments">ShowAppointments</string>
    <string name="title_activity_create_appointment">CreateAppointment</string>
    <string name="title_activity_show_doctors_demo">ShowDoctorsDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_codifyTextView">Details:</string>
    <string name="hint_codifyTextView">Enter details</string>
    <string name="lbl_codifyEditText">Details:</string>
    <string name="hint_codifyDetails">Enter details..</string>
    <string name="title_activity_create_note_home">CreateNoteHome</string>
    <string name="btn_removeTag">Remove Tag</string>
    <string name="btn_okay">Okay</string>
    <string name="editTextHint_enterNoteName">Enter note name</string>
    <string name="editTextHint_enterIllness">Enter Illness</string>
    <string name="btn_saveLayout">Save Layout</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string-array name="NoteFragments_array">
        <item>Doctor</item>
        <item>Illness</item>
        <item>Weight</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="createNote">Create Note</string>
    <string name="spinnerPrompt_selectLayout">Change Note Layout</string>
    <string name="hint_DoctorDetails">Enter Visit Details</string>
    <string name="hint_enterSymptoms">Enter Symptoms</string>
    <string name="lbl_enterSeverity">Enter Severity</string>
    <string name="hint_moreDetails">Enter Additional Details</string>
    <string name="editTextHint_enterLayoutName">Enter layout name</string>
    <string name="btn_cancel">Cancel</string>
    <string name="enterSeverity">Enter Severity:</string>
    <string name="symptoms">Symptoms:</string>
    <string name="severity">Severity:</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="no_data_available">You don\'t have any notes yet.\n Press the \"+\" button to create a new note</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="prevalence">Prevalence</string>
    <string name="no_data_available2">You don\'t have any notes yet.</string>
    <string name="doctors_info">Doctor\'s Info</string>
    <string name="illness_info">Illness Info:</string>
    <string name="notetype">NoteType</string>
    <string name="NoteTypeHere">NoteTypeHere</string>
    <string name="NoteTitleLabel">Note Title:</string>
    <string name="NoteCreatedLabel">Created:</string>
    <string name="NoteTypeLabel">Note Type:</string>
    <string name="doctors_header">Appointment Details:</string>
    <string name="labeltext">Label Text:</string>
    <string name="illness_header">Illness Details:</string>
    <string name="title">Title:</string>
    <string name="DateNTime">Date + \n Time:&#160;&#160;&#160; </string>
    <string name="yLabel">Y Label</string>
    <string name="XLabel">Severity</string>
    <string name="help_button_hospital">Hospital</string>
    <string name="help_button_clinic">Clinic</string>
    <string name="imageDesc">Uploaded Test Results</string>
    <string name="slowInternet">The request is taking longer than usual.\nPlease check your network connection.</string>
    <string name="NoteName">Note Name</string>
    <string name="noteDescription">Note description here</string>
    <string name="weight_header">Weight Details</string>
    <string name="WeightNHeight">Weight +\nHeight:&#160;&#160;&#160;</string>
    <string name="enterWeight">Enter Weight in Pounds</string>
    <string name="enterHeight">Enter Height in Inches</string>
    <string name="weight">Weight:</string>
    <string name="height">Height:</string>
    <string name="bmi">BMI:</string>
    <string name="addDoctor">Add Doctor</string>
    <string name="add_doctor_name">Doctor\'s Name</string>
    <string name="add_doctor_email">Doctor\'s Email</string>
    <string name="add_doctor_phone">Doctor\'s Phone</string>
    <string name="add_doctor_title">Doctor\'s Title</string>
    <string name="add_doctor_address">Doctor\'s Address</string>
    <string name="logout">Logout</string>
    <string name="testTitle">Doctor</string>
    <string name="editTextHint_enterAppointmentName">Enter Appointment Name</string>
    <string name="TextView_CreateNewAppointment">Create Appointment</string>
    <string name="editTextHint_enterAppointmentDate">Enter Appointment Date</string>
    <string name="editTextHint_enterAppointmentTime">Enter Appointment Time</string>
    <string name="editTextHint_enterAppointmentClinic">Enter Clinic</string>
    <string name="editTextHint_enterAppointmentDoctor">Enter Doctor</string>
    <string name="TextView_EditNewAppointment">Edit Appointment</string>
    <string name="Appointment_name">Appointment Name:</string>
    <string name="Appointment_date">Date:</string>
    <string name="Appointment_time">Time:</string>
    <string name="Appointment_Clinic">Clinic:</string>
    <string name="Appointment_doc">Doctor:</string>
    <string name="editTextHint_enterMedicationName">Enter Medication Name</string>
    <string name="editTextHint_enter_times_per_day">Enter Times Per Day</string>
    <string name="editTextHint_enterMedicationIllness">Enter Reasoning</string>
    <string name="editTextHint_enterMedicationStart">Enter Start Date</string>
    <string name="editTextHint_enterMedicationDoseage">Enter Dosage</string>
    <string name="editTextHint_enterMediactionRepeats">Enter Number of Repeats</string>
    <string name="TextView_CreateNewMedication">Add Medication</string>
    <string name="TextView_EditNewMedication">Edit Medication</string>
    <string name="medication_name">Medication Name:</string>
    <string name="Medication_often">Times Per Day:</string>
    <string name="Medication_illness">Illness:</string>
    <string name="Medication_start">Start Date:</string>
    <string name="Medication_dosage">Dosage:</string>
    <string name="Medication_repeats">Number of Repeats:</string>
    <string name="editTextHint_enterMedicationOften">Enter Times Per Day:</string>
    <string name="editTextHint_enterMedicationReason">Enter Illness</string>
    <string name="editTextHint_enterMedicationDosage">Enter Dosage</string>
    <string name="editTextHint_enterMedicationRepeats">Enter Number of Repeats</string>
    <string name="no_data_available_medications">You don\'t have any medications yet.\n Press the \"+\" button to create a new entry</string>
    <string name="no_data_available_appointments">You don\'t have any appointments yet.\n Press the \"+\" button to create a new entry</string>
    <string name="TextView_Settings">Settings</string>
    <string name="reset_acoount">Reset Account</string>
    <string name="fragment_appointments">Appointments</string>
</resources>