<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/doctorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/testName"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/doctorPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/testPhone"
        android:layout_gravity="end"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/doctorAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/testAddress"
        android:layout_below="@+id/doctorName"
        android:layout_alignParentStart="true" />

</RelativeLayout>