<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <!--<GridLayout-->
        <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:columnCount="2"-->
        <!--android:rowCount="1"-->
        <!--android:orientation="vertical"-->
        <!--android:layout_marginEnd="16dp">-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/address_label"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/illness_info"/>

        <LinearLayout
            android:id="@+id/linearLayout_illnessFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginTop="10dp">


            <LinearLayout
                android:id="@+id/linearLayout_symptoms_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/symptoms"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout_severity_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/severity"
                    />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


    <!--</GridLayout>-->
</merge>